[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mol2scad"
authors = [{name = "KOLANICH"}]
description = "A tool to render mol and sdf files to OpenSCAD"
readme = "ReadMe.md"
keywords = ["mol", "structure data file", "OpenSCAD", "molecule"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: End Users/Desktop",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Education",
]
urls = {Homepage = "https://codeberg.org/KOLANICH-physics/mol2scad.py"}
requires-python = ">=3.4"
dependencies = [
	"webcolors", # @ git+https://github.com/ubernostrum/webcolors.git"
	"mollusk", # @ git+https://github.com/georglind/mollusk.git"
	"solid", # @ git+https://github.com/SolidCode/SolidPython.git"
	"mendeleev",
	"plumbum # @ git+https://github.com/tomerfiliba/plumbum.git",
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
py-modules = ["mol2scad"]
include-package-data = false

[tool.setuptools_scm]
